--- a/Digital_Twin_Robot_Arm.ipynb
+++ b/Digital_Twin_Robot_Arm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPDTAWXjJayJIOxGW5MvpuF",
+      "authorship_tag": "ABX9TyNAYma+c47oA6X5rpY1snRA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -403,20 +403,15 @@
         "\n",
         "\n",
         "```\n",
-        "jupyter notebook \\\n",
-        "    --NotebookApp.allow_origin='https://colab.research.google.com' \\\n",
-        "    --port=8888 \\\n",
-        "    --NotebookApp.port_retries=0 \\\n",
-        "    --NotebookApp.allow_credentials=True\n",
-        "\n",
+        "jupyter lab --ServerApp.allow_origin=\"https://colab.research.google.com\" --port=8888 --ServerApp.port_retries=0\n",
         "```\n",
         "\n",
         "    \n",
         "Once the server has started, it will print a message with the initial backend URL used for authentication. Make a copy of this URL as you'll need to provide this for step 2 below.\n",
         "\n",
-        "Step 2: Connect to the local runtime\n",
+        "# Connect to the local runtime\n",
         "\n",
-        "In Colab, click the \"Connect\" button and select \"Connect to local runtime...\". Enter the URL from the previous step in the dialog that appears and click the \"Connect\" button. After this, you should now be connected to your local runtime.\n"
+        "In Google Colab, click the \"Connect\" button and select \"Connect to local runtime...\". Enter the URL from the previous step in the dialog that appears and click the \"Connect\" button. After this, you should now be connected to your local runtime.\n"
       ]
     },
     {
