--- a/Digital_Twin_Robot_Arm.ipynb
+++ b/Digital_Twin_Robot_Arm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMN+WycFEcxZ6r4kHKyrpja",
+      "authorship_tag": "ABX9TyO3g/KuOwOMiv2CdatxsdNR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,7 +139,7 @@
         },
         "id": "6VUCp2uJk9ny",
         "cellView": "form",
-        "outputId": "a3887e65-b86e-4ee4-c76c-4c0632806eb4"
+        "outputId": "46f29a33-c443-4090-ea22-586482ff7f00"
       },
       "source": [
         "#@title Import and Setup Onshape Client\n",
@@ -182,10 +182,13 @@
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Onshape client configured - ready to go!\n"
+            "Onshape Client successfully imported!\n"
           ]
         }
       ]
@@ -493,65 +496,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "a8ceab62"
-      },
-      "source": [
-        "## Map Sensor Data to Mate Rotation\n",
-        "\n",
-        "### Subtask:\n",
-        "Convert the raw sensor values (0-1023) to the appropriate range for the mate's rotation (e.g., radians or degrees, depending on the mate type)."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ea9d6bd7"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "Define a function to map the incoming sensor data from the Arduino (0-1023) to the desired range for the Onshape mate's rotation, allowing for scaling and offset adjustments."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "c052248c"
-      },
-      "source": [
-        "# Define a function to map the sensor value to the mate position\n",
-        "def map_sensor_to_mate(sensor_value, sensor_min=0, sensor_max=1023, mate_min=0, mate_max=3.14):\n",
-        "  \"\"\"\n",
-        "  Maps a sensor value from one range to another.\n",
-        "\n",
-        "  Args:\n",
-        "    sensor_value: The raw sensor value (0-1023).\n",
-        "    sensor_min: The minimum expected sensor value.\n",
-        "    sensor_max: The maximum expected sensor value.\n",
-        "    mate_min: The minimum desired mate position.\n",
-        "    mate_max: The maximum desired mate position.\n",
-        "\n",
-        "  Returns:\n",
-        "    The mapped mate position.\n",
-        "  \"\"\"\n",
-        "  # Ensure the sensor value is within the sensor range\n",
-        "  clamped_sensor_value = max(sensor_min, min(sensor_value, sensor_max))\n",
-        "\n",
-        "  # Perform the mapping\n",
-        "  mapped_value = mate_min + (clamped_sensor_value - sensor_min) * (mate_max - mate_min) / (sensor_max - sensor_min)\n",
-        "\n",
-        "  return mapped_value\n",
-        "\n",
-        "# Example usage (assuming you have a potentiometer value from the previous step)\n",
-        "# mapped_rotation = map_sensor_to_mate(pot_values[0], mate_min=0, mate_max=3.14) # Example for the first potentiometer mapping to a rotation in radians\n",
-        "\n",
-        "# You will need to adjust the mate_min and mate_max values based on your specific Onshape mate's limits and units (radians or meters)."
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "268ec825"
       },
       "source": [
@@ -627,6 +571,65 @@
         "### Subtask:\n",
         "Parse the incoming data from the Arduino to extract the individual potentiometer values.\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a8ceab62"
+      },
+      "source": [
+        "## Map Sensor Data to Mate Rotation\n",
+        "\n",
+        "### Subtask:\n",
+        "Convert the raw sensor values (0-1023) to the appropriate range for the mate's rotation (e.g., radians or degrees, depending on the mate type)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ea9d6bd7"
+      },
+      "source": [
+        "**Reasoning**:\n",
+        "Define a function to map the incoming sensor data from the Arduino (0-1023) to the desired range for the Onshape mate's rotation, allowing for scaling and offset adjustments."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c052248c"
+      },
+      "source": [
+        "# Define a function to map the sensor value to the mate position\n",
+        "def map_sensor_to_mate(sensor_value, sensor_min=0, sensor_max=1023, mate_min=0, mate_max=3.14):\n",
+        "  \"\"\"\n",
+        "  Maps a sensor value from one range to another.\n",
+        "\n",
+        "  Args:\n",
+        "    sensor_value: The raw sensor value (0-1023).\n",
+        "    sensor_min: The minimum expected sensor value.\n",
+        "    sensor_max: The maximum expected sensor value.\n",
+        "    mate_min: The minimum desired mate position.\n",
+        "    mate_max: The maximum desired mate position.\n",
+        "\n",
+        "  Returns:\n",
+        "    The mapped mate position.\n",
+        "  \"\"\"\n",
+        "  # Ensure the sensor value is within the sensor range\n",
+        "  clamped_sensor_value = max(sensor_min, min(sensor_value, sensor_max))\n",
+        "\n",
+        "  # Perform the mapping\n",
+        "  mapped_value = mate_min + (clamped_sensor_value - sensor_min) * (mate_max - mate_min) / (sensor_max - sensor_min)\n",
+        "\n",
+        "  return mapped_value\n",
+        "\n",
+        "# Example usage (assuming you have a potentiometer value from the previous step)\n",
+        "# mapped_rotation = map_sensor_to_mate(pot_values[0], mate_min=0, mate_max=3.14) # Example for the first potentiometer mapping to a rotation in radians\n",
+        "\n",
+        "# You will need to adjust the mate_min and mate_max values based on your specific Onshape mate's limits and units (radians or meters)."
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
